{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 176,
  "lineage": "250ec578-f54c-464a-8d52-8821a3039d3f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ravi-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307592787224:internet-gateway/igw-0053f0b7eadc65d90",
            "id": "igw-0053f0b7eadc65d90",
            "owner_id": "307592787224",
            "tags": {
              "Name": "ravi-igw"
            },
            "tags_all": {
              "Name": "ravi-igw"
            },
            "vpc_id": "vpc-050453386692d781a"
          },
          "dependencies": [
            "aws_vpc.ravi-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0053f0b7eadc65d90",
            "id": "r-rtb-03d6df58a81b37db61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d6df58a81b37db6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ravi-igw",
            "aws_route_table.ravi-rt",
            "aws_vpc.ravi-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ravi-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307592787224:route-table/rtb-03d6df58a81b37db6",
            "id": "rtb-03d6df58a81b37db6",
            "owner_id": "307592787224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0053f0b7eadc65d90",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ravi-public-rt"
            },
            "tags_all": {
              "Name": "ravi-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-050453386692d781a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ravi-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ravi-rt-association-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092ffb3d0f31849cd",
            "route_table_id": "rtb-03d6df58a81b37db6",
            "subnet_id": "subnet-031d01a789f9cdd5c"
          },
          "dependencies": [
            "aws_route_table.ravi-rt",
            "aws_subnet.ravi-public-subnet",
            "aws_vpc.ravi-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ravi-rt-association-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b904d8357e50317e",
            "route_table_id": "rtb-03d6df58a81b37db6",
            "subnet_id": "subnet-0424a0443b77e8667"
          },
          "dependencies": [
            "aws_route_table.ravi-rt",
            "aws_subnet.ravi-public-subnet2",
            "aws_vpc.ravi-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ravi-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307592787224:security-group/sg-026dba13f3418db00",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026dba13f3418db00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connect from my PC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ravi-sg",
            "name_prefix": "",
            "owner_id": "307592787224",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-050453386692d781a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ravi-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ravi-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307592787224:subnet/subnet-031d01a789f9cdd5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031d01a789f9cdd5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307592787224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ravi-public-subnet"
            },
            "tags_all": {
              "Name": "ravi-public-subnet"
            },
            "vpc_id": "vpc-050453386692d781a"
          },
          "dependencies": [
            "aws_vpc.ravi-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ravi-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307592787224:subnet/subnet-0424a0443b77e8667",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.123.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0424a0443b77e8667",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307592787224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ravi-public-subnet2"
            },
            "tags_all": {
              "Name": "ravi-public-subnet2"
            },
            "vpc_id": "vpc-050453386692d781a"
          },
          "dependencies": [
            "aws_vpc.ravi-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ravi-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307592787224:vpc/vpc-050453386692d781a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0df02ae0db673e80a",
            "default_route_table_id": "rtb-059077fcd67b2b00c",
            "default_security_group_id": "sg-04f813014521d2f45",
            "dhcp_options_id": "dopt-060d2873032219ed0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-050453386692d781a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059077fcd67b2b00c",
            "owner_id": "307592787224",
            "tags": {
              "Name": "ravi-vpc"
            },
            "tags_all": {
              "Name": "ravi-vpc"
            }
          }
        }
      ]
    }
  ]
}